Fix Base64 encoder error